--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
             <label for="destination">Destination Airport:</label>
             <select id="destination"></select>
         </div>
-        <button id="visualize-btn">Visualize Shortest Path</button>
+        <button id="visualize-btn">Find Shortest Path</button>
         <div id="visualization-container">
             <!-- Visualization will be displayed here -->
         </div>
